rewrite tests with repository (#3)